Support windows build of android native extensions

--- a/lib/extensions/digest/ext/Rakefile
+++ b/lib/extensions/digest/ext/Rakefile
@@ -9,16 +9,16 @@ def build_extension(name, arch)
 
       args = []
       args << "-I."
-      args << "-I../../../../platform/shared/ruby/include"
-      args << "-I../../../../platform/shared"
+      args << "-I#{$rootdir}/platform/shared/ruby/include"
+      args << "-I#{$rootdir}/platform/shared"
 
     if $android
-      args << "-I../../../../platform/shared/ruby/linux"
-      args << "-I../../../../platform/shared/ruby/generated"
+      args << "-I#{$rootdir}/platform/shared/ruby/linux"
+      args << "-I#{$rootdir}/platform/shared/ruby/generated"
       cc_compile f, $tempdir, args or exit 1
 
     else
-      args << "-I../../../../platform/shared/ruby/iphone"
+      args << "-I#{$rootdir}/platform/shared/ruby/iphone"
       args << "-D_XOPEN_SOURCE"
       args << "-D_DARWIN_C_SOURCE"
       args << "-isysroot #{$sdkroot}"
@@ -74,8 +74,13 @@ namespace "build" do
   task :config do
     if ENV['ANDROID_API_LEVEL'] != nil
       $targetdir = ENV['TARGET_TEMP_DIR']
+      raise "TARGET_TEMP_DIR is not set" if $targetdir.nil?
       $tempdir = ENV['TEMP_FILES_DIR']
-      require File.dirname(__FILE__) + '/../../../../platform/android/build/androidcommon.rb'
+      raise "TEMP_FILES_DIR is not set" if $tempdir.nil?
+      $rootdir = ENV['RHODES_ROOT_DIR']
+      raise "RHODES_ROOT_DIR is not set" if $rootdir.nil?
+
+      require File.join($rootdir, 'platform/android/build/androidcommon.rb')
 
       setup_ndk(ENV['ANDROID_NDK'],ENV['ANDROID_API_LEVEL'])
 
